--- a/pkg-vip.tex
+++ b/pkg-vip.tex
@@ -8,6 +8,19 @@
 In the era of “big data”, it is becoming more of a challenge to not only build state-of-the-art predictive models, but also gain an understanding of what’s really going on in the data. For example, it is often of interest to know which, if any, of the predictors in a fitted model are relatively influential on the predicted outcome. Some modern algorithms—like random forests and gradient boosted decision trees—have a natural way of quantifying the importance or relative influence of each feature. Other algorithms—like naive Bayes classifiers and support vector machines—are not capable of doing so and model-agnostic approaches are generally used to measure each predictor’s importance. Enter \pkg{vip}, an R package for constructing variable importance scores/plots for many types of supervised learning algorithms using model-based and novel model-agnostic approaches. We'll also discuss a novel way to display both feature importance and feature effects together using sparklines.
 }
 
+\strong{TODO:}
+
+\begin{itemize}
+
+  \item Discuss layout of the package (e.g., \code{vi()} vs. \code{vip()} and workhorse functions like \code{vi\_permute()}.
+  \item Discuss strengths/weaknesses of different approaches.
+  \item Discuss other packages (like \pkg{DALEX} and \pkg{iml}.
+  \item Should we discuss interaction detection? Probably...(the $H$-statistic example, if correct, is motivation enough).
+  \item Need a good motivating example (e.g., Energy example from arXiv paper using the \pkg{SuperLearner} package).
+  \item Better discussion of function arguments, especially for permutation approach.
+  \item Parallel examples for PDP-, ICE-, and permuataion-based approaches.
+
+\end{itemize}
 
 % ------------------------------------------------------------------------------
 \section{Introduction}
@@ -424,8 +437,31 @@ Tne permutation approach introduces randomness into the procedure and therefore 
 #> 10 x.10         0.0348 0.00290
 \end{example}
 
+
 % ------------------------------------------------------------------------------
-\section{A TensorFlow example}
+\section{Use sparklines to characterize feature effects}
+% ------------------------------------------------------------------------------
+
+Starting with \pkg{vip} 0.1.3, we have included a new function \code{vit()} for constructing HTML-based feature importance tables. The primary difference between \code{vi()} and \code{vit()} is that the latter includes an \code{Effect} column that displays a sparkline representation of the partial dependence function for each feature. This is a concise way to display both feature importance and feature effect information in a single table. See \code{?vip::vit} for details. We illustrate the basic use of \code{vit()} in the code chunks below.
+
+\begin{example}
+# First, compute a tibble of variable importance scores using any method
+var_imp <- vi(rfo, method = "permute", metric = "rmse", target = "y")
+
+# Next, convert to an html-based data table with sparklines
+vit(var_imp, fit = rfo)
+\end{example}
+
+\begin{figure}[!htb]
+  \centering 
+  \includegraphics[width=1\linewidth]{figures/sparklines} 
+  \caption{VIP with sparkline representation of feature effects.}
+  \label{fig:sparklines}
+\end{figure}
+
+
+% ------------------------------------------------------------------------------
+\section{Ames housing example}
 % ------------------------------------------------------------------------------
 
 TBD.
