rough outline of content

--- a/pkg-vip.tex
+++ b/pkg-vip.tex
@@ -15,8 +15,9 @@ In the era of “big data”, it is becoming more of a challenge to not only bui
   \item Discuss layout of the package (e.g., \code{vi()} vs. \code{vip()} and workhorse functions like \code{vi\_permute()}.
   \item Discuss strengths/weaknesses of different approaches.
   \item Discuss other packages (like \pkg{DALEX} and \pkg{iml}.
+  \item DIscuss how PDP and ICE curve info is stored as an attribute whenever \code{method = "pdp"} or \code{method = "ice"}, respectively.
   \item Should we discuss interaction detection? Probably...(the $H$-statistic example, if correct, is motivation enough).
-  \item Need a good motivating example (e.g., Energy example from arXiv paper using the \pkg{SuperLearner} package).
+  \item Need a good motivating example (e.g., airfoil example from arXiv paper using the \pkg{SuperLearner} package).
   \item Better discussion of function arguments, especially for permutation approach.
   \item Parallel examples for PDP-, ICE-, and permuataion-based approaches.
 
