--- a/pkg-vip.bib
+++ b/pkg-vip.bib
@@ -329,6 +329,30 @@ End of Semester Regression Project},
   url = {https://doi.org/10.1080/10618600.2014.907095},
 }
 
+@Article{iml-pkg,
+  author = {Christoph Molnar and Bernd Bischl and Giuseppe Casalicchio},
+  title = {iml: An R package for Interpretable Machine Learning},
+  doi = {10.21105/joss.00786},
+  url = {http://joss.theoj.org/papers/10.21105/joss.00786},
+  year = {2018},
+  publisher = {Journal of Open Source Software},
+  volume = {3},
+  number = {26},
+  pages = {786},
+  journal = {JOSS},
+}
+
+@Article{DALEX-pkg,
+  title = {DALEX: Explainers for Complex Predictive Models in R},
+  author = {Przemyslaw Biecek},
+  journal = {Journal of Machine Learning Research},
+  year = {2018},
+  volume = {19},
+  pages = {1--5},
+  number = {84},
+  url = {http://jmlr.org/papers/v19/18-416.html},
+}
+  
 @Article{hunter-matplotlib-2007,
   author = {John D. Hunter},
   title = {Matplotlib: A 2D Graphics Environment},
@@ -425,6 +449,15 @@ End of Semester Regression Project},
   url = {http://lmdvr.r-forge.r-project.org},
 }
 
+@Book{ggplot2-pkg,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+
 @Book{hastie-elements-2009,
   title = {The Elements of Statistical Learning: Data Mining, Inference, and Prediction, Second Edition},
   author = {Trevor Hastie and Robert. Tibshirani and Jerome Friedman},
@@ -452,16 +485,6 @@ End of Semester Regression Project},
   address = {Thousand Oaks {CA}},
   url = {http://socserv.socsci.mcmaster.ca/jfox/Books/Companion},
 }
-
-@Book{ggplot2-pkg,
-  author = {Hadley Wickham},
-  title = {ggplot2: Elegant Graphics for Data Analysis},
-  publisher = {Springer-Verlag},
-  year = {2009},
-  isbn = {978-0-387-98140-6},
-  url = {http://ggplot2.org},
-}
-
 
 @Manual{pkg-vip,
   title = {vip: Variable Importance Plots},
@@ -536,6 +559,14 @@ End of Semester Regression Project},
   url = {https://www.R-project.org/},
 }
 
+@Manual{tibble-pkg,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2019},
+  note = {R package version 2.1.1},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+  
 @Manual{caret-pkg,
   title = {caret: Classification and Regression Training},
   author = {Max Kuhn},
