--- a/pkg-vip.tex
+++ b/pkg-vip.tex
@@ -5,7 +5,7 @@
 \maketitle
 
 \abstract{
-In the era of “big data”, it is becoming more of a challenge to not only build state-of-the-art predictive models, but also gain an understanding of what’s really going on in the data. For example, it is often of interest to know which, if any, of the predictors in a fitted model are relatively influential on the predicted outcome. Some modern algorithms—like random forests and gradient boosted decision trees—have a natural way of quantifying the importance or relative influence of each feature. Other algorithms—like naive Bayes classifiers and support vector machines—are not capable of doing so and model-agnostic approaches are generally used to measure each predictor’s importance. Enter \pkg{vip}, an R package for constructing variable importance scores/plots for many types of supervised learning algorithms using model-based and novel model-agnostic approaches. We'll also discuss a novel way to display both feature importance and feature effects together using sparklines.
+In the era of "big data", it is becoming more of a challenge to not only build state-of-the-art predictive models, but also gain an understanding of what’s really going on in the data. For example, it is often of interest to know which, if any, of the predictors in a fitted model are relatively influential on the predicted outcome. Some modern algorithms—like random forests and gradient boosted decision trees—have a natural way of quantifying the importance or relative influence of each feature. Other algorithms—like naive Bayes classifiers and support vector machines—are not capable of doing so and model-agnostic approaches are generally used to measure each predictor’s importance. Enter \pkg{vip}, an R package for constructing variable importance scores/plots for many types of supervised learning algorithms using model-based and novel model-agnostic approaches. We'll also discuss a novel way to display both feature importance and feature effects together using sparklines.
 }
 
 \strong{TODO:}
@@ -21,16 +21,50 @@ In the era of “big data”, it is becoming more of a challenge to not only bui
   \item Better discussion of function arguments, especially for permutation approach.
   \item Parallel examples for PDP-, ICE-, and permuataion-based approaches.
   \item Example showing how to supply your own custom metric function.
+  \item Add note about permuting features in the train vs. test/new data and a reference to the IML book chapter where this is discussed further.
 
 \end{itemize}
+
 
 % ------------------------------------------------------------------------------
 \section{Introduction}
 % ------------------------------------------------------------------------------
 
-Variable importance (VI).
+Computing variable importance (VI) and communicating them through variable importance plots (VIPs) is fundamental to the problem of \dfn{interpretable machine learning}. TBD.
 
-For illustration, we use one of the regression problems described in \citet{multivariate-friedman-1991} and \citet{bagging-breiman-1996}. These data are available in the \CRANpkg{mlbench package} \citep{mlbench-pkg}. The inputs consist of 10 independent variables uniformly distributed on the interval $\left[0,1\right]$; however, only 5 out of these 10 are actually used in the true model. Outputs are created according to the formula described in \code{?mlbench::mlbench.friedman1}. The code chunk below simulates 500 observations from the model default standard deviation.
+VI scores and VIPs are available in a number of packages. The \CRANpkg{iml} package \citep{iml-pkg} provides the \code{FeatureImp()} function which computes variable importance for general prediction models using the permutation approach. It is written in R6 (FIXME: Add refrence) and allows the user to specify a generic loss function or select from a pre-defined list (e.g., \code{loss = "mse"} for mean squared error). It also allows the user to specify whether importance is measures ad the difference or as the ratio of the original model error and the model error after permutation. The user can also specify the number of repitionions used when permuting each feature to help stabilize the variability in the procedure.
+
+The \CRANpkg{DALEX} package \citep{DALEX-pkg} also provides permutation-based variable importance scores through the \code{variable\_importance()} function. Similar to \code{iml::FeatureImp()}, this function allows the user to specify a loss function and how the importance scores are computed (e.g., using the difference or ratio). It also provides an option to sample the training data before shuffling the data to compute importance (the default is to use \code{n\_sample = 1000}. This can help speed up computation.
+
+The \CRANpkg{caret} package \citep{caret-pkg} includes a general \code{varImp()} function for computing model-specific and filter-based variable importance scores. Filter-based approaches, which are described in \citet{applied-kuhn-2013}, do not make use of the fitted model to measure VI. They also do not take into account the other predictors in the model. For regression problems, a popular approach to measuring the VI of a numeric predictor $x$ is to first fit a flexible nonparametric model between $x$ and the target $Y$; for example, the locally-weighted polynomial regression (LOWESS) method developed by \citet{robust-cleveland-1979}. From this fit, a pseudo-$R^2$ measure can be obtained from the resulting residuals and used as a measure of VI. For categorical predictors, a different method based on standard statistical tests (e.g., $t$-tests and ANOVAs) can be employed; see
+\citet{applied-kuhn-2013} for details. For classification problems, an area under the ROC curve (AUC) statistic can be used to quantify predictor importance. The AUC statistic is computed by using the predictor $x$ as input to the ROC curve. If $x$ can reasonably separate the classes of $Y$, that is a clear indicator that $x$ is an important predictor (in terms of class separation) and this is captured in the corresponding AUC statistic. For problems with more than two classes, extensions of the ROC curve or a one-vs-all approach can be used.
+
+While the \pkg{iml} and \pkg{DALEX} packages provide model-agnostic approaces to computing variable importance, \pkg{caret} provides model-specific approaches (e.g., using the absolute value of the $t$-statistic for linear models) as well less accurate filter-based appraoches . Furthermore, each package has a completely different interface (e.g., \pkg{iml} is written in R6). The \CRANpkg{vip} package \citep{vip-pkg} strives to provide a consistent interface to both model-specific and model-agnostic approaches to feature importance that is simple to use with three main functions:
+
+\begin{itemize}
+ 
+  \item \code{vi()} computes VI scores using model-specific or model-agnostic approaces (the results are always returned as a tibble \citep{tibble-pkg});
+  
+  \item \code{vip()} computes VI scores using model-specific or model-agnostic approaces and allow flexible plotting of the results with \CRANpkg{ggplot2}-type graphics \citep{ggplot2-pkg};
+  
+  \item \code{add\_sparklines()} adds a novel sparkline representation of feature effects (e.g., partial dependence plots) to any VI table produced by \code{vi()}.
+
+\end{itemize}
+
+There's also a function called \code{vint()} (for variable interactions) but is is experimental and will not be discussed here. The interested reader is pointed to \citet{greenwell-simple-2018}.
+
+
+% ------------------------------------------------------------------------------
+\section{Conbstructing VIPs in R}
+% ------------------------------------------------------------------------------
+
+We'll illustrate major concepts using one of the regression problems described in \citet{multivariate-friedman-1991} and \citet{bagging-breiman-1996}: 
+
+\begin{equation}
+  Y_i = 10 \sin\left(\pi X_{1i} X_{2i}\right) + 20 \left(X_{3i} - 0.5\right) ^ 2 + 10 X_{4i} + 5 X_{5i} + \epsilon_i, \quad i = 1, 2, \dots, n,
+\end{equation}
+
+where $\epsilon_i \stackrel{iid}{\sim} N\left(0, \sigma^2\right)$. Data from this model can be generated using the \code{mlbench.friedman1()} function available in the \CRANpkg{mlbench package} \citep{mlbench-pkg}. The inputs consist of 10 independent variables uniformly distributed on the interval $\left[0,1\right]$; however, only 5 out of these 10 are actually used in the true model. Outputs are created according to the formula described in \code{?mlbench::mlbench.friedman1}. The code chunk below simulates 500 observations from the model default standard deviation.
 
 \begin{example}
 # Simulate training data
@@ -56,6 +90,8 @@ tibble::as_tibble(trn)
 #> 10 0.546  0.150 0.476 0.706 0.829  0.373   0.192 0.873 0.456 0.694 15.0 
 #> # … with 490 more rows
 \end{example}
+
+For these data, it should be clear that features $X_1$--$X_5$ are the most important! (The others don't influence $Y$ at all.)
 
 
 % ------------------------------------------------------------------------------
@@ -108,7 +144,7 @@ vi_bst <- xgb.importance(model = bst)
 \begin{figure}[!htb]
   \centering 
   \includegraphics[width=1\linewidth]{figures/vi-plots} 
-  \caption{Model-based VIPs for the three different tree-based models.}
+  \caption{Model-based VIPs for the three different tree-based models fit to the simulated Friedman data..}
   \label{fig:vi-plots}
 \end{figure}
 
@@ -228,7 +264,7 @@ vip(backward, num_features = length(coef(backward)),
 \begin{figure}[!htb]
   \centering 
   \includegraphics[width=1\linewidth]{figures/vip-step} 
-  \caption{Example VIP from a linear model.}
+  \caption{Example VIP from a linear model fit to the simulated Friedman data.}
   \label{fig:vip-step}
 \end{figure}
 
@@ -266,15 +302,13 @@ vip(mars)
 \begin{figure}[!htb]
   \centering 
   \includegraphics[width=1\linewidth]{figures/vip-earth} 
-  \caption{Example VIP from a MARS model}.
+  \caption{Example VIP from a MARS model fit to the simulated Friedman data.}
   \label{fig:vip-earth}
 \end{figure}
 
 \subsection{Neural networks}
 
 For neural netwroks (NNs), two popular methods for constructing VI scores are the Garson algorithm \citep{interpreting-garson-1991}, later modified by \citet{back-goh-1995}, and the Olden algorithm \citep{accurate-olden-2004}. For both algorithms, the basis of these importance scores is the network’s connection weights. The Garson algorithm determines VI by identifying all weighted connections between the nodes of interest. Olden’s algorithm, on the other hand, uses the product of the raw connection weights between each input and output neuron and sums the product across all hidden neurons. This has been shown to outperform the Garson method in various simulations. For DNNs, a similar method due to \citet{data-gedeon-1997} considers the weights connecting the input features to the first two hidden layers (for simplicity and speed); but this method can be slow for large networks. We illustrate these two methods below using \code{vip()} with the \CRANpkg{nnet} package \citep{nnet-pkg} (see the results in Figure~\ref{}).
-
-\strong{FIXME: Add vip support for these two methods!}
 
 \begin{example}
 # Load required packages
@@ -291,6 +325,13 @@ p2 <- vip(nn, method = "olsen")
 # Figure X
 grid.arrange(p1, p2, nrow = 1)
 \end{example}
+
+\begin{figure}[!htb]
+  \centering 
+  \includegraphics[width=1\linewidth]{figures/vip-model-nn} 
+  \caption{Example VIPs from a single-hidden-layer NN fit to the simulated Friedman data.}
+  \label{fig:vip-earth}
+\end{figure}
 
 
 % ------------------------------------------------------------------------------
@@ -323,7 +364,7 @@ grid.arrange(grobs = pdps, ncol = 5)
 \begin{figure}[!htb]
   \centering 
   \includegraphics[width=1\linewidth]{figures/pdp-ppr} 
-  \caption{PDPs of main effects in the PPR model.}
+  \caption{PDPs of main effects in the PPR model fit to the simulated Friedman data..}
   \label{fig:pdp-ppr}
 \end{figure}
 
@@ -347,7 +388,7 @@ In Figure~\ref{fig:vip-pp-nn} we display the PDP-based feature improtance for th
 \begin{figure}[!htb]
   \centering 
   \includegraphics[width=1\linewidth]{figures/vip-ppr-nn} 
-  \caption{PDP-based feature importance for the PPR and NN models.}
+  \caption{PDP-based feature importance for the PPR and NN models fit to the simulated Friedman data..}
   \label{fig:pdp-ppr-nn}
 \end{figure}
 
@@ -373,7 +414,7 @@ grid.arrange(grobs = ice_curves, ncol = 5)
 \begin{figure}[!htb]
   \centering 
   \includegraphics[width=1\linewidth]{figures/ice-ppr} 
-  \caption{ICE curves for each feature in the PPR model. The red curve represents the PDP (i.e., the averaged ICE curves).}
+  \caption{ICE curves for each feature in the PPR model fit to the simulated Friedman data. The red curve represents the PDP (i.e., the averaged ICE curves).}
   \label{fig:ice-ppr}
 \end{figure}
 
@@ -391,7 +432,7 @@ grid.arrange(p1, p2, ncol = 2)
 \begin{figure}[!htb]
   \centering 
   \includegraphics[width=1\linewidth]{figures/vip-ice-ppr-nn} 
-  \caption{ICE-based feature importance for the PPR and NN models.}
+  \caption{ICE-based feature importance for the PPR and NN models fit to the simulated Friedman data..}
   \label{fig:vip-ice-ppr-nn}
 \end{figure}
 
@@ -406,9 +447,9 @@ An example is given below for the previously fitted PPR and NN models. The resul
 # Plot VI scores
 set.seed(2021)  # for reproducibility
 p1 <- vip(pp, method = "permute", target = "y", metric = "rsquared",
-          pred_fun = predict) + ggtitle("PPR")
+          pred_wrapper = predict) + ggtitle("PPR")
 p2 <- vip(nn, method = "permute", target = "y", metric = "rsquared",
-          pred_fun = predict) + ggtitle("NN")
+          pred_wrapper = predict) + ggtitle("NN")
 
 # Figure X
 grid.arrange(p1, p2, ncol = 2)
@@ -417,7 +458,7 @@ grid.arrange(p1, p2, ncol = 2)
 \begin{figure}[!htb]
   \centering 
   \includegraphics[width=1\linewidth]{figures/vip-ice-ppr-nn} 
-  \caption{Permutation-based feature importance for the PPR and NN models.}
+  \caption{Permutation-based feature importance for the PPR and NN models fit to the simulated Friedman data..}
   \label{fig:vip-permute-ppr-nn}
 \end{figure}
 
@@ -444,20 +485,20 @@ Tne permutation approach introduces randomness into the procedure and therefore 
 \section{Use sparklines to characterize feature effects}
 % ------------------------------------------------------------------------------
 
-Starting with \pkg{vip} 0.1.3, we have included a new function \code{vit()} for constructing HTML-based feature importance tables. The primary difference between \code{vi()} and \code{vit()} is that the latter includes an \code{Effect} column that displays a sparkline representation of the partial dependence function for each feature. This is a concise way to display both feature importance and feature effect information in a single table. See \code{?vip::vit} for details. We illustrate the basic use of \code{vit()} in the code chunks below.
+Starting with \pkg{vip} 0.1.3, we have included a new function \code{add\_sparklines()} for constructing HTML-based feature importance tables. The primary difference between \code{vi()} and \code{add\_sparklines()} is that the latter includes an \code{Effect} column that displays a sparkline representation of the partial dependence function for each feature. This is a concise way to display both feature importance and feature effect information in a single table. See \code{?vip::add\_sparklines} for details. We illustrate the basic use of \code{add\_sparklines()} in the code chunks below.
 
 \begin{example}
 # First, compute a tibble of variable importance scores using any method
 var_imp <- vi(rfo, method = "permute", metric = "rmse", target = "y")
 
 # Next, convert to an html-based data table with sparklines
-vit(var_imp, fit = rfo)
+add_sparklines(var_imp, fit = rfo)
 \end{example}
 
 \begin{figure}[!htb]
   \centering 
   \includegraphics[width=1\linewidth]{figures/sparklines} 
-  \caption{VIP with sparkline representation of feature effects.}
+  \caption{VIP with sparkline representation of feature effects fit to the simulated Friedman data.}
   \label{fig:sparklines}
 \end{figure}
 
@@ -466,7 +507,7 @@ vit(var_imp, fit = rfo)
 \section{Predict the sale price for a home}
 % ------------------------------------------------------------------------------
 
-For illustration, we'll use the Ames housing data set---a modernized and expanded version of the often cited Boston Housing data set. These data are available in the \CRANpkg{AmesHousing} package
+For illustration, we'll use the Ames housing data set---a more contemporary version of the often cited Boston Housing data set. These data are available in the \CRANpkg{AmesHousing} package
 \citep{AmesHousing-pkg}. %Using the R package \CRANpkg{h2o} \citep{h2o-pkg}, we trained and tuned a GBM using 10-fold cross-validation. The model fit is reasonable, with a cross-validated (pseudo) \(R^2\) of 91.5\%. Like other tree-based ensembles, GBMs have a natural way of defining VI which was described in Section \ref{sec:model-specific}. The VI scores for these data are displayed in the left side of Figure \ref{fig:ames-gbm-vip}. This plot indicates that the overall quality of the material and finish of the house (\code{Overall\_Qual}), physical location within the Ames city limits (\code{Neighborhood}), and the above grade (ground) living area (\code{Gr\_Liv\_Area}) are highly associated with the logarithm of the sales price (\code{Log\_Sale\_Price}). The VI scores also indicate that type of heating (\code{Heating}), the number of kitchens above grade (\code{Kitchen\_AbvGr}), and the low quality finished square feet for all floors (\code{Low\_Qual\_Fin\_SF}) have little association with \code{Log\_Sale\_Price}. (Note that the bottom two features in Figure \ref{fig:ames-gbm-vip}, \code{Street} and \code{Utilities}, have a VI score of exactly zero; in other words, they were never used to partion the data at any point in the GBM ensemble.)
 
 \begin{example}
@@ -480,26 +521,42 @@ library(SuperLearner)
 
 # Stack models
 set.seed(840)
-learners <- c("SL.xgboost", "SL.ranger", "SL.earth", "SL.glmnet", "SL.ksvm")
-sl <- SuperLearner(Y = y, X = X, SL.library = learners)
+ctrl <- SuperLearner.CV.control(V = 5L, shuffle = TRUE)
+sl <- SuperLearner(Y = y, X = X, SL.library = learners, verbose = TRUE,
+                   cvControl = ctrl)
+sl
 
-# Prediction wrappers
-pfun <- function(object, newdata) {
+# Prediction wrapper functions
+imp_fun <- function(object, newdata) {
   predict(object, newdata = newdata)$pred
 }
-parfun <- function(object, newdata) {
+par_fun <- function(object, newdata) {
   mean(predict(object, newdata = newdata)$pred)
 }
 
+# Setup parallel backend
+library(doParallel) # load the parallel backend
+cl <- makeCluster(5) # use 5 workers
+registerDoParallel(cl) # register the parallel backend
+
 # Permutation-based feature importance
 set.seed(278)
-imp <- vi(sl, method = "permute", train = X, target = y, metric = "rmse",
-          pred_wrapper = pfun, nsim = 5)
+var_imp <- vi(sl, method = "permute", train = X, target = y, metric = "rmse",
+              pred_wrapper = imp_fun, nsim = 5, parallel = TRUE)
 
 # Add sparline representation of feature effects
-add_sparklines(imp[1L:2L, ], fit = sl, pred.fun = parfun, train = X, digits = 2, 
-               trim.outliers = TRUE, grid.resolution = 20)
+add_sparklines(var_imp[1L:10L, ], fit = sl, pred.fun = par_fun, train = X, 
+               digits = 2, verbose = TRUE, trim.outliers = TRUE, 
+               grid.resolution = 20, parallel = TRUE)
 \end{example}
+
+\begin{figure}[!htb]
+  \centering 
+  \includegraphics[width=1\linewidth]{figures/ames-sparklines} 
+  \caption{VIP with sparkline representation of feature effects for the top ten features from a Super Learner fit to the Ames housing data.}
+  \label{fig:sparklines}
+\end{figure}
+
 
 % ------------------------------------------------------------------------------
 \section{Summary}
