--- a/pkg-vip.tex
+++ b/pkg-vip.tex
@@ -14,12 +14,12 @@ In the era of "big data", it is becoming more of a challenge to not only build s
 
   \item Discuss layout of the package (e.g., \code{vi()} vs. \code{vip()} and workhorse functions like \code{vi\_permute()}.
   \item Discuss strengths/weaknesses of different approaches.
-  \item Discuss other packages (like \pkg{DALEX} and \pkg{iml}.
-  \item DIscuss how PDP and ICE curve info is stored as an attribute whenever \code{method = "pdp"} or \code{method = "ice"}, respectively.
+  \item \sout{Discuss other packages (like \pkg{DALEX} and \pkg{iml}).}
+  \item Discuss how PDP and ICE curve info is stored as an attribute whenever \code{method = "pdp"} or \code{method = "ice"}, respectively.
   \item Should we discuss interaction detection? Probably...(the $H$-statistic example, if correct, is motivation enough).
-  \item Need a good motivating example (e.g., airfoil example from arXiv paper using the \pkg{SuperLearner} package).
+  \item \sout{Need a good motivating example (e.g., airfoil example from arXiv paper using the \pkg{SuperLearner} package).}
   \item Better discussion of function arguments, especially for permutation approach.
-  \item Parallel examples for PDP-, ICE-, and permuataion-based approaches.
+  \item \sout{Parallel examples for PDP-, ICE-, and permuataion-based approaches.}
   \item Example showing how to supply your own custom metric function.
   \item Add note about permuting features in the train vs. test/new data and a reference to the IML book chapter where this is discussed further.
 
@@ -509,6 +509,8 @@ add_sparklines(var_imp, fit = rfo)
 
 For illustration, we'll use the Ames housing data set---a more contemporary version of the often cited Boston Housing data set. These data are available in the \CRANpkg{AmesHousing} package
 \citep{AmesHousing-pkg}. %Using the R package \CRANpkg{h2o} \citep{h2o-pkg}, we trained and tuned a GBM using 10-fold cross-validation. The model fit is reasonable, with a cross-validated (pseudo) \(R^2\) of 91.5\%. Like other tree-based ensembles, GBMs have a natural way of defining VI which was described in Section \ref{sec:model-specific}. The VI scores for these data are displayed in the left side of Figure \ref{fig:ames-gbm-vip}. This plot indicates that the overall quality of the material and finish of the house (\code{Overall\_Qual}), physical location within the Ames city limits (\code{Neighborhood}), and the above grade (ground) living area (\code{Gr\_Liv\_Area}) are highly associated with the logarithm of the sales price (\code{Log\_Sale\_Price}). The VI scores also indicate that type of heating (\code{Heating}), the number of kitchens above grade (\code{Kitchen\_AbvGr}), and the low quality finished square feet for all floors (\code{Low\_Qual\_Fin\_SF}) have little association with \code{Log\_Sale\_Price}. (Note that the bottom two features in Figure \ref{fig:ames-gbm-vip}, \code{Street} and \code{Utilities}, have a VI score of exactly zero; in other words, they were never used to partion the data at any point in the GBM ensemble.)
+
+To speed up the process, we perform the computations in parallel using...
 
 \begin{example}
 # Load the Ames housing data
